  the tag for the documentation). Every other alerts also appear in the
  documentation.
  (Jules Aguillon, review by Florian Angeletti)

- #11079: Add the -nobanners option to dumpobj.
  (Sébastien Hinderer, review by Gabriel Scherer and Vincent Laviron)

- #11100: Fix ocamltest to make sure failed tests are not counted as
  "unexpected error".
  (Damien Doligez, review by Sébastien Hinderer)

### Manual and documentation:

- #11058: runtime/HACKING.adoc tips on debugging the runtime
  (Gabriel Scherer, review by Enguerrand Decorne and Nicolás Ojeda Bär)

- #11093: Add an effect handlers tutorial
  (KC Sivaramakrishnan, review by François Pottier, Gabriel Scherer, François
  Bobot and Wiktor Kuchta)

- #11192: Better documentation for condition variables.
  (François Pottier, review by Luc Maranget, Xavier Leroy, and Wiktor Kuchta)

### Compiler user-interface and warnings:

- #9140, #11131: New command-line flag -nocwd to not include implicit
  the current directory to the load path.
  (Thomas Roglin, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #11089: Add 'since <version>' information to compiler warnings.
  (André Maroneze, review by Florian Angeletti and Gabriel Scherer)

- #10909: Disable warning 59 (assignment to immutable blocks) unless flambda
  invariant checks are enabled.
  (Vincent Laviron, review by Gabriel Scherer)

- #10981: Implement a -cmi-file option for ocamlc and ocamlopt.
  (Sébastien Hinderer, review by Damien Doligez, Daniel Bünzli and
  Florian Angeletti)

* #11049: Stop padding 1-digit compiler minor version numbers.
  (So for instance OCaml 5.0 rather than 5.00)
  (Sébastien Hinderer, review by David Allsopp, Florian Angeletti and
  Xavier Leroy)

- #11184: Stop calling ranlib on created / installed libraries
  (Sébastien Hinderer, review by Xavier Leroy)

### Internal/compiler-libs changes:

- #10878, #10909: restore flambda after the Multicore merge.
  (Vincent Laviron, review by Gabriel Scherer and Xavier Leroy)
